--- a/cs2_practical_anova.qmd
+++ b/cs2_practical_anova.qmd
@@ -49,21 +49,21 @@ Analysis of variance or ANOVA is a test than can be used when we have multiple s
 ::: panel-tabset
 ## tidyverse
 
-| Libraries               | Description                                                                                                       |
-|:---------------|:-------------------------------------------------------|
-| `library(tidyverse)`    | A collection of R packages designed for data science                                                              |
-| `library(rstatix)`      | Converts base R stats functions to a tidyverse-friendly format. Also contains extra functionality that we'll use. |
-| `library(ggResidpanel)` | Creates diagnostic plots using `ggplot2`                                                                          |
+| Libraries| Description|
+|:-----------------|:-----------------------------------------------------|
+| [`library(tidyverse)`](https://www.tidyverse.org)| A collection of R packages designed for data science.|
+| [`library(rstatix)`](https://rpkgs.datanovia.com/rstatix/)| Converts base R stats functions to a tidyverse-friendly format. Also contains extra functionality that we'll use. |
+| [`library(ggResidpanel)`](https://goodekat.github.io/ggResidpanel/index.html) | Creates diagnostic plots using `ggplot2`.|
 
-| Library        | Function              | Description                 |
+| Library        | Function              | Description|
 |:---------------|:----------------------|:----------------------------|
-| `rstatix`      | `get_summary_stats()` | Computes summary statistics |
-| `ggResidpanel` | `resid_panel()`       | Creates diagnostic plots    |
+| `rstatix`| [`get_summary_stats()`](https://rdrr.io/github/kassambara/rstatix/man/get_summary_stats.html) | Computes summary statistics. |
+| `ggResidpanel` | [`resid_panel()`](https://rdrr.io/cran/ggResidpanel/man/resid_panel.html)| Creates diagnostic plots.|
 
 ## R
 
 | Function         | Description                                                 |
-|:-----------------|:-----------------------------------------------------|
+|:------------------|:----------------------------------------------------|
 | `lm()`           | Fits a linear model                                         |
 | `anova()`        | Carries out an ANOVA on a linear model                      |
 | `qqnorm()`       | Plots a Q-Q plot for comparison with a normal distribution. |
@@ -72,24 +72,24 @@ Analysis of variance or ANOVA is a test than can be used when we have multiple s
 
 ## Python
 
-| Libraries     | Description                                                                                |
-|:--------------|:--------------------------------------------------------|
-| [`pandas`](https://pandas.pydata.org/docs/getting_started/index.html) | A Python data analysis and manipulation tool.|
-| [`pingouin`](https://pingouin-stats.org) | A Python module developed to have simple yet exhaustive stats functions. |
-| [`plotnine`](https://plotnine.readthedocs.io/en/stable/) | The Python equivalent of `ggplot2`.|
-| [`statsmodels`](https://www.statsmodels.org/stable/index.html) | A Python module for statistical models, conducting tests and statistical data exploration. |
+| Libraries                                                             | Description                                                                                |
+|:----------------|:------------------------------------------------------|
+| [`pandas`](https://pandas.pydata.org/docs/getting_started/index.html) | A Python data analysis and manipulation tool.                                              |
+| [`pingouin`](https://pingouin-stats.org)                              | A Python module developed to have simple yet exhaustive stats functions.                   |
+| [`plotnine`](https://plotnine.readthedocs.io/en/stable/)              | The Python equivalent of `ggplot2`.                                                        |
+| [`statsmodels`](https://www.statsmodels.org/stable/index.html)        | A Python module for statistical models, conducting tests and statistical data exploration. |
 
-| Functions                     | Description                                                |
+| Functions                                                                                                                                  | Description                                                |
 |:------------------------|:----------------------------------------------|
-| [`pandas.DataFrame.describe()`](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.describe.html) | Gives summary statistics.|
-| [`pandas.DataFrame.groupby()`](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.groupby.html)  | Group DataFrame using a mapper or by a Series of columns   |
-| [`pandas.DataFrame.head()`](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.head.html)     | Plots the first few rows of a DataFrame.|
-| [`pandas.DataFrame.query()`](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.query.html)    | Query the columns of a DataFrame with a boolean expression |
-| [`pandas.read_csv`](https://pandas.pydata.org/docs/reference/api/pandas.read_csv.html)| Reads in a `.csv` file.|
-|[`pingouin.anova()`](https://pingouin-stats.org/generated/pingouin.anova.html#pingouin.anova)| Performs an analysis of variance.|
-|[`pingouin.homoscedasticity()`](https://pingouin-stats.org/generated/pingouin.homoscedasticity.html#pingouin.homoscedasticity)| Tests equality of variance.|
-| [`pingouin.normality()`](https://pingouin-stats.org/generated/pingouin.normality.html)| Performs the Shapiro-Wilk test for normality.|
-|[`statsmodels.formula.api.ols`](https://www.statsmodels.org/stable/generated/statsmodels.formula.api.ols.html#statsmodels.formula.api.ols)| Creates a model from a formula and data frame.|
+| [`pandas.DataFrame.describe()`](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.describe.html)                               | Gives summary statistics.                                  |
+| [`pandas.DataFrame.groupby()`](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.groupby.html)                                 | Group DataFrame using a mapper or by a Series of columns   |
+| [`pandas.DataFrame.head()`](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.head.html)                                       | Plots the first few rows of a DataFrame.                   |
+| [`pandas.DataFrame.query()`](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.query.html)                                     | Query the columns of a DataFrame with a boolean expression |
+| [`pandas.read_csv`](https://pandas.pydata.org/docs/reference/api/pandas.read_csv.html)                                                     | Reads in a `.csv` file.                                    |
+| [`pingouin.anova()`](https://pingouin-stats.org/generated/pingouin.anova.html#pingouin.anova)                                              | Performs an analysis of variance.                          |
+| [`pingouin.homoscedasticity()`](https://pingouin-stats.org/generated/pingouin.homoscedasticity.html#pingouin.homoscedasticity)             | Tests equality of variance.                                |
+| [`pingouin.normality()`](https://pingouin-stats.org/generated/pingouin.normality.html)                                                     | Performs the Shapiro-Wilk test for normality.              |
+| [`statsmodels.formula.api.ols`](https://www.statsmodels.org/stable/generated/statsmodels.formula.api.ols.html#statsmodels.formula.api.ols) | Creates a model from a formula and data frame.             |
 :::
 :::
 
